--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@fastify/static": "^6.10.2",
+    "@homebridge/ciao": "^1.1.7",
     "electron-squirrel-startup": "^1.0.0",
     "fastify": "^4.19.1"
   }
