--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@fastify/static": "^6.10.2",
     "@homebridge/ciao": "^1.1.7",
+    "bonjour-service": "^1.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "fastify": "^4.19.1"
   }
